2006-06-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* font-mgr.c (extract_fcapi_string):
	(fc_intern):
	(Ffc_name_parse):
	(Ffc_name_unparse):
	(Ffc_pattern_add):
	(Ffc_pattern_del):
	(Ffc_pattern_get):
	(string_list_to_fcobjectset):
	fc_intern and extract_fcapi_string should return
	[const] Extbyte *.  Make it so, update callers.

2006-05-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_initialize_font_instance):
	(x_font_instance_truename):
	(charset_table):
	(x_find_charset_font):
	Pander to GCC4 signed character paranoia.

2006-06-19  Jerry James  <james@xemacs.org>

	* device-x.c (x_IO_error_handler): Do not dereference d if it is
	NULL.
	* dialog-x.c (dbox_selection_callback): Ensure f is non-NULL, then
	dereference it, not the other way around.
	* emacs.c (main_1): restart is always 0 here.
	* extents.c (detach_all_extents): Call extent_list_delete_all with
	a non-NULL parameter only.
	* glyphs-widget.c (widget_query_geometry): Guard against possibly
	NULL width and height.
	* window.c (change_window_height): Restore use of CURCHARSIZE
	removed by 2006-06-16 change, to preserve the abstraction.

2006-06-19  Jerry James  <james@xemacs.org>

	* frame-x.c (x_set_frame_properties): Remove casts to silence GCC
	warnings about a missing sentinel.

2006-06-16  Jerry James  <james@xemacs.org>

	* dgif_lib.c (DGifCloseFile): Do not dereference GifFile before
	checking if it is NULL.  Also fix a memory leak.
	* fileio.c (Finsert_file_contents_internal): Remove dead code.
	* input-method-xlib.c (XIM_SetGeometry): Do not dereference f or
	xic before checking if they are NULL.
	* md5.c (Fmd5): Check whether Lstream_read encountered an error.
	* nas.c (Err): Fix a memory leak.
	* scrollbar-x.c (x_free_scrollbar_instance): Do not dereference
	instance->scrollbar_data before checking if it is NULL.
	* text.c (eicmp_1): Move assertions to before the point where they
	must be true for correctness.