@@ -432,7 +432,7 @@ x_output_display_block (struct window *w, struct display_line *dl, int block,
 #ifndef USE_XFT
   struct frame *f = XFRAME (w->frame);
 #endif
-  Ichar_dynarr *buf = Dynarr_new (Ichar);
+  Ichar_dynarr *buf;
   Lisp_Object window;
 
   struct display_block *db = Dynarr_atp (dl->display_blocks, block);
@@ -459,7 +459,7 @@ x_output_display_block (struct window *w, struct display_line *dl, int block,
 
   if (end < 0)
     end = Dynarr_length (rba);
-  Dynarr_reset (buf);
+  buf = Dynarr_new (Ichar);
 
   while (elt < end)
     {
